--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
     <form hidden action="#" class="new-book-form">
       
         <label>
-          name <input type="text" name="title">
+          name <input type="text" name="title" required>
         </label>
         <label>
-          author <input type="text" name="author">
+          author <input type="text" name="author" required>
         </label>
         <br>
 
         <label>
-          pages <input type="number" name="pageCount">
+          pages <input required type="number" name="pageCount">
         </label>
         <label>
           already read?<input type="checkbox" name="readStatus">
